@@ -12,6 +12,7 @@ import com.google.common.collect.MinMaxPriorityQueue;
 import io.smallrye.mutiny.Multi;
 import io.smallrye.mutiny.Uni;
 import io.stargate.sgv2.jsonapi.api.request.RequestContext;
+import io.stargate.sgv2.jsonapi.api.request.tenant.Tenant;
 import io.stargate.sgv2.jsonapi.exception.*;
 import io.stargate.sgv2.jsonapi.metrics.JsonProcessingMetricsReporter;
 import io.stargate.sgv2.jsonapi.service.cqldriver.executor.QueryExecutor;
@@ -25,7 +26,6 @@ import java.util.concurrent.atomic.AtomicInteger;
 import java.util.concurrent.atomic.AtomicLong;
 import java.util.concurrent.atomic.AtomicReference;
 import java.util.function.Supplier;
-import java.util.stream.Collectors;
 
 /**
  * ReadOperation interface which all find command operations will use. It also provides the
@@ -66,7 +66,6 @@ public interface CollectionReadOperation extends CollectionOperation {
    * @param vectorSearch - whether the query uses vector search
    * @param commandName - The command that calls ReadOperation
    * @param jsonProcessingMetricsReporter - reporter to use for reporting JSON read/write metrics
-   * @return
    */
   default Uni<FindResponse> findDocument(
       RequestContext dataApiRequestInfo,
@@ -79,6 +78,7 @@ public interface CollectionReadOperation extends CollectionOperation {
       DocumentProjector projection,
       int limit,
       boolean vectorSearch,
+      Tenant tenant,
       String commandName,
       JsonProcessingMetricsReporter jsonProcessingMetricsReporter) {
     return Multi.createFrom()
@@ -102,7 +102,7 @@ public interface CollectionReadOperation extends CollectionOperation {
               Iterator<Row> rowIterator = rSet.currentPage().iterator();
               while (--remaining >= 0 && rowIterator.hasNext()) {
                 Row row = rowIterator.next();
-                ReadDocument document = null;
+                ReadDocument document;
                 try {
                   // TODO: Use the field name, not the ordinal for the field this is too brittle
                   JsonNode root = readDocument ? objectMapper.readTree(row.getString(2)) : null;
@@ -110,7 +110,7 @@ public interface CollectionReadOperation extends CollectionOperation {
                     // create metrics
                     // TODO Use the column names!
                     jsonProcessingMetricsReporter.reportJsonReadBytesMetrics(
-                        commandName, row.getString(2).length());
+                        tenant, commandName, row.getString(2).length());
 
                     if (projection.doIncludeSimilarityScore()) {
                       float score = row.getFloat(3); // similarity_score
@@ -175,7 +175,7 @@ public interface CollectionReadOperation extends CollectionOperation {
   byte true_byte = (byte) 1;
 
   /**
-   * This method reads upto system fixed limit
+   * This method reads up to system fixed limit
    *
    * @param queryExecutor
    * @param queries Multiple queries only in case of `in` condition on `_id` field
@@ -191,7 +191,6 @@ public interface CollectionReadOperation extends CollectionOperation {
    * @param vectorSearch - whether the query uses vector search
    * @param commandName - The command that calls ReadOperation
    * @param jsonProcessingMetricsReporter - reporter to use for reporting JSON read/write metrics
-   * @return
    */
   default Uni<FindResponse> findOrderDocument(
       RequestContext dataApiRequestInfo,
@@ -206,6 +205,7 @@ public interface CollectionReadOperation extends CollectionOperation {
       int errorLimit,
       DocumentProjector projection,
       boolean vectorSearch,
+      Tenant tenant,
       String commandName,
       JsonProcessingMetricsReporter jsonProcessingMetricsReporter) {
     final AtomicInteger documentCounter = new AtomicInteger(0);
@@ -255,7 +255,7 @@ public interface CollectionReadOperation extends CollectionOperation {
               }
               List<ReadDocument> documents = new ArrayList<>(remaining);
               while (--remaining >= 0 && rowIterator.hasNext()) {
-                ReadDocument document = null;
+                ReadDocument document;
                 Row row = rowIterator.next();
                 List<JsonNode> sortValues = new ArrayList<>(numberOfOrderByColumn);
                 for (int sortColumnCount = 0;
@@ -281,8 +281,7 @@ public interface CollectionReadOperation extends CollectionOperation {
                   columnCounter++;
                   ByteBuffer boolValue = row.getBytesUnsafe(columnCounter);
                   if (boolValue != null) {
-                    sortValues.add(
-                        nodeFactory.booleanNode(Byte.compare(true_byte, boolValue.get(0)) == 0));
+                    sortValues.add(nodeFactory.booleanNode(true_byte == boolValue.get(0)));
                     continue;
                   }
                   // null value
@@ -313,7 +312,7 @@ public interface CollectionReadOperation extends CollectionOperation {
                         sortValues);
                 documents.add(document);
                 jsonProcessingMetricsReporter.reportJsonReadBytesMetrics(
-                    commandName, row.getString(2).length());
+                    tenant, commandName, row.getString(2).length());
               }
               return Uni.createFrom().item(documents);
             })
@@ -329,8 +328,10 @@ public interface CollectionReadOperation extends CollectionOperation {
               // begin value to read from the sorted list
               int begin = skip;
 
-              // If the begin index is >= sorted list size, return empty response
-              if (begin >= sortedData.size()) return new FindResponse(List.of(), null);
+              // If the beginning index is >= sorted list size, return empty response
+              if (begin >= sortedData.size()) {
+                return new FindResponse(List.of(), null);
+              }
               // Last index to which we need to read
               int end = Math.min(skip + limit, sortedData.size());
               // Create a sublist of the required rage
@@ -360,7 +361,7 @@ public interface CollectionReadOperation extends CollectionOperation {
                             return ReadDocument.from(
                                 readDoc.id().orElse(null), readDoc.txnId().orElse(null), data);
                           })
-                      .collect(Collectors.toList());
+                      .toList();
               return new FindResponse(responseDocuments, null);
             });
   }
@@ -381,10 +382,6 @@ public interface CollectionReadOperation extends CollectionOperation {
   /**
    * Default implementation to run count query and parse the result set, this approach counts by key
    * field
-   *
-   * @param queryExecutor
-   * @param simpleStatement
-   * @return
    */
   default Uni<CountResponse> countDocumentsByKey(
       RequestContext dataApiRequestInfo,
@@ -404,19 +401,12 @@ public interface CollectionReadOperation extends CollectionOperation {
                         DatabaseException.Code.COUNT_READ_FAILED.get(
                             Map.of("errorMessage", failure.toString())));
               }
-              getCount(rs, failure, counter);
+              getCount(rs, null, counter);
               return Uni.createFrom().item(new CountResponse(counter.get()));
             });
   }
 
-  /**
-   * Default implementation to run count query and parse the result set
-   *
-   * @param dataApiRequestInfo
-   * @param queryExecutor
-   * @param simpleStatement
-   * @return
-   */
+  /** Default implementation to run count query and parse the result set */
   default Uni<CountResponse> countDocuments(
       RequestContext dataApiRequestInfo,
       QueryExecutor queryExecutor,
@@ -441,21 +431,14 @@ public interface CollectionReadOperation extends CollectionOperation {
 
   private void getCount(AsyncResultSet rs, Throwable error, AtomicLong counter) {
     // BUG - aaron 25 Nov 2025 - this code does not wait for the fetchNextPage to complete before
-    // returning
-    // and it cannot handle a failure on fetchNextPage - will fix after this PR
+    // returning, and it cannot handle a failure on fetchNextPage - will fix after this PR
     counter.addAndGet(rs.remaining());
     if (rs.hasMorePages()) {
       rs.fetchNextPage().whenComplete((nextRs, e) -> getCount(nextRs, e, counter));
     }
   }
 
-  /**
-   * Run estimated count query and parse the result set
-   *
-   * @param queryExecutor
-   * @param simpleStatement
-   * @return
-   */
+  /** Run estimated count query and parse the result set */
   default Uni<CountResponse> estimateDocumentCount(
       RequestContext dataApiRequestInfo,
       QueryExecutor queryExecutor,
@@ -495,7 +478,7 @@ public interface CollectionReadOperation extends CollectionOperation {
 
       // estimate the total row count by dividing the total partition count by the ratio
       // of the sum of all token ranges to the entire token range, avoiding division by zero
-      // relies on the assumption that the supershredding schema uses one row per partition
+      // relies on the assumption that the super-shredding schema uses one row per partition
       if (totalRangeSize > 0) {
         counter.addAndGet((long) (totalPartitionsCount / (totalRangeSize / TOTAL_TOKEN_RANGE)));
       }
